crates/cosh-sdk/src/term_screen/surface/line/snapshots/cosh_sdk__term_screen__surface__line__test__cluster_representation_double_width.snap
---
source: crates/cosh-sdk/src/term_screen/surface/line/test.rs
expression: "&compressed.cells"
---
C(
    ClusteredLine {
        text: "❤ 😍🤢he❤ 😍🤢llo❤ 😍🤢",
        is_double_wide: Some(
            [
                0,
                3,
                5,
                9,
                12,
                14,
                19,
                22,
                24,
            ],
        ),
        clusters: [
            Cluster {
                cell_width: 26,
                attrs: CellAttributes {
                    attributes: 0,
                    intensity: Normal,
                    underline: None,
                    blink: None,
                    italic: false,
                    reverse: false,
                    strikethrough: false,
                    invisible: false,
                    wrapped: false,
                    overline: false,
                    semantic_type: Output,
                    foreground: Default,
                    background: Default,
                    fat: None,
                },
            },
        ],
        len: 26,
        last_cell_width: Some(
            1,
        ),
    },
)
