crates/cosh-sdk/src/term_screen/surface/line/snapshots/cosh_sdk__term_screen__surface__line__test__cluster_representation_empty.snap
---
source: crates/cosh-sdk/src/term_screen/surface/line/test.rs
expression: "&compressed.cells"
---
C(
    ClusteredLine {
        text: "",
        is_double_wide: None,
        clusters: [],
        len: 0,
        last_cell_width: None,
    },
)
